--- a/MOSA1/Properties/launchSettings.json
+++ b/MOSA1/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "Compile and Run": {
       "commandName": "Executable",
       "executablePath": "cmd",
-      "commandLineArgs": "/c start \"\" ..\\Properties\\Run.bat $safeprojectname$.exe",
+      "commandLineArgs": "/c start \"\" ..\\Properties\\Run.bat MOSA1.exe",
       "workingDirectory": "bin"
     }
   }
